wip: fix alignment

--- a/styles/VantaContainer.module.css
+++ b/styles/VantaContainer.module.css
@@ -8,9 +8,8 @@
   height: 100vh;
   /* width: 100vw; */
   overflow: hidden;
-  left: 0;
+  top: 0;
   right: 0;
-  left: 0;
   left: 0;
   background: #242322;
   z-index: -1;
